@@ -66,14 +66,14 @@ setup(
         "mmcif >= 0.57",
         'scandir; python_version < "3.0"',
         # 'configparser; python_version < "3.0"',
-        "rcsb.utils.io >= 0.75",
+        "rcsb.utils.io >= 0.92",
         "rcsb.utils.config >= 0.35",
         "rcsb.utils.multiproc >= 0.17",
         "rcsb.utils.validation >= 0.22",
-        "rcsb.utils.chemref >= 0.58",
+        "rcsb.utils.chemref >= 0.65",
         "rcsb.utils.citation >= 0.15",
         "rcsb.utils.ec >= 0.21",
-        "rcsb.utils.taxonomy >= 0.29",
+        "rcsb.utils.taxonomy >= 0.31",
         "rcsb.utils.seq >= 0.43",
         "rcsb.utils.struct >= 0.26",
         "SQLAlchemy; sys_platform == 'linux'",
