@@ -278,3 +278,4 @@
  31-Oct-2030  V1.645 Add taxonomy identifier salvage method
   1-Nov-2030  V1.646 Extend taxonomy identifier salvage method
   6-Dec-2030  V1.647 Update database server configuration
+  9-Dec-2030  V1.648 Add validation slider image repository content type
